--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expence-tracker-mern",
+  "name": "expense-tracker-mern",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
