--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 MONGO_URI=mongodb+srv://shady:ansari9167@expense-tracker-mern.umlzl.mongodb.net/expensetracker?retryWrites=true&w=majority
